--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ h6 {
   font-size: 1.5rem;
 }
 
+/* APP*/
 .top-container {
   display: flex;
   justify-content: space-between;
@@ -86,3 +87,27 @@ h6 {
   width: 125px;
 }
 
+/* HOME */
+.home-icons-container {
+  width: 75%;
+  margin: 50% auto;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  column-gap: 50px;
+  row-gap: 50px;
+
+}
+.item1 {
+  grid-column-start: 2;
+}
+.item2 {
+  grid-column-start: 1;
+}
+.item3 {
+  grid-column-start: 2;
+  grid-row-start: 3;
+}
+.item4 {
+  grid-column-start: 3;
+}
